k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fishing-forum
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fishing-forum
  template:
    metadata:
      labels:
        app: fishing-forum
    spec:
      containers:
        - name: app
          image: krakos01/chmura_project:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads
      volumes:
        - name: uploads
          emptyDir: {}
