k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fishing-forum
spec:
  selector:
    app: fishing-forum
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
